# libghash

./: .gitignore  CMakeLists.txt
include/: ghash.h
src/: pjw.c  polynomial-rolling.c  rshash.c
tests/: test-pjwhash.c  test-polynomial-rolling.c  test-rshash.c
